##Text encoding: utf-8

2006-11-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump.

2006-11-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac:don't echo an extra "no" when mozilla is not detected.
	* mozilla-plugin/Makefile.am: include top_srcdir.

2006-11-26  Jean Bréfort  <jean.brefort@normalesup.org> (for Jordan Mantha)
	* glade/table/Makefile.am: added a new glade file.
	* glade/table/acidity.glade: legend for acidity property.
	* programs/table/gchemtable-app.cc: show the new legend.

2006-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/element.cc: Element::GetIntegerProperty returns GCU_ERROR
	for unknown properties instead of 0.
	* gcu/element.h: ditto.
	* programs/table/gchemtable-app.cc: ditto.

2006-11-24  Jean Bréfort  <jean.brefort@normalesup.org> (for Jordan Mantha)
	* programs/table/gchemtable-app.cc: initial work on new color schemes
	(family and acidity).
	* programs/table/gchemtable-app.h: ditto.

2006-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/chem3ddoc.cc: don't crash on invalid atoms, just remove them.

2006-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/filechooser.cc: choose the default mime type if the mime type
	can't be determined.
	* programs/crystal/application.cc: rewrote save as image code to make
	it consistent with 3d viewer and gchempaint.
	* programs/crystal/application.h: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* programs/crystal/window.cc: ditto.

2006-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: add image mime types support.
	* gcu/application.h: ditto.
	* gcu/chem3ddoc.cc: use a c++ string instead of char* for filename in
	Chem3dDoc::OnExportVrml.
	* gcu/chem3ddoc.h: ditto.
	* gcu/filechooser.cc: add mime type to the combo box if no description
	is available.
	* gcu/glview.cc: use a c++ string instead of char* for filename in
	GLView::SaveAsImage.