@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2006-11-28  Jean Bréfort  <jean.brefort@normalesup.org>
+	* gcu/gtkcrystalviewer.cc: force update of the view after loading.
+	* mozilla-plugin/chem-viewer.cc: add support for Gnome Crystal files.
+	* mozilla-plugin/moz-plugin.c: (NP_GetMIMEDescription): ditto.
+
 2006-11-27  Jean Bréfort  <jean.brefort@normalesup.org>
 	* configure.ac: post release version bump.
 
